syncthing/templates/syncthing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app: syncthing
spec:
  ports:
  - name: http
    port: 8384
    targetPort: http
  selector:
    app: syncthing
